--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jeebby/node-crodeon",
-  "version": "1.0.105",
+  "version": "1.1.0",
   "description": "Crodeon Node-RED nodes",
   "keywords": [
     "Crodeon",
@@ -12,11 +12,11 @@
   "license": "MIT",
   "node-red": {
     "nodes": {
-      "sensor": "crodeon/sensor.js",
-      "api-credentials": "crodeon/api-credentials.js",
-      "reporter": "crodeon/reporter.js",
+      "crodeon-sensor": "crodeon/sensor.js",
+      "crodeon-api-credentials": "crodeon/api-credentials.js",
+      "crodeon-reporter": "crodeon/reporter.js",
       "relais-reader": "crodeon/relais-reader.js",
-      "relais-writer": "crodeon/relais-writer.js"
+      "crodeon-relais-writer": "crodeon/relais-writer.js"
     }
   },
   "dependencies": {
